Fixing awards and milestones

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -267,15 +267,15 @@
     background-position: -4px -2px !important;
 }
 .tag-handicap {
-  background-image: url(./assets/resources/handicap.png);
-  background-size: 42px 35px !important;
-  background-color: transparent;
-  box-shadow: none;
-  border-radius: unset;
-  filter: drop-shadow(.5px .5px 0 black)
-      drop-shadow(-.5px .5px 0 black)
-      drop-shadow(.5px -.5px 0 black)
-      drop-shadow(-.5px -.5px 0 black);
+    background-image: url(./assets/resources/handicap.png);
+    background-size: 42px 35px !important;
+    background-color: transparent;
+    box-shadow: none;
+    border-radius: unset;
+    filter: drop-shadow(.5px .5px 0 black)
+        drop-shadow(-.5px .5px 0 black)
+        drop-shadow(.5px -.5px 0 black)
+        drop-shadow(-.5px -.5px 0 black);
 }
 
 .tag-escape {
@@ -296,7 +296,7 @@
     width: 30px !important;
     height: 34px !important;
     background-position: 0px;
-}
+}  
 
 .tag-colony-count {
     background: url(./assets/tiles/colony.png) no-repeat;
@@ -618,10 +618,11 @@
         /* TODO(kberg): move these files up a level. */
         @ma-name-fanmade:
           colonizer, minimalist, terran, tropicalist,
-          curator, tourist, engineer, a-zoologist,
+          curator, tourist, a-engineer, a-zoologist,
 
           t-collector, firestarter, terra-pioneer, spacefarer, gambler,
           biologist, t-economizer, t-politician, urbanist, warmonger,
+          incorporator, manufacturer, politician,
         ;
         each(@ma-name-fanmade, {
           .ma-name--@{value} {
@@ -634,7 +635,7 @@
           landscaper, metropolist, mogul, thawer, traveller,
 
           collector, electrician, fundraiser, geologist, landshaper, lobbyist, philantropist,
-          planetologist, producer, researcher, sponsor, forester
+          planetologist, producer, researcher, sponsor, forester, breeder, thermoengineer,
         ;
         each(@ma-name-modular, {
           .ma-name--@{value} {
