Milestones and Awards for fan maps for Vastias Borealus (Novus) (#7236)
* Awards and Milestones for Vastitas Borealis Novus.

This isn't working yet.

* Iconography

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -608,6 +608,8 @@
           forecaster, edgedancer, visionary, naturalist, voyager,
 
           rugged, purifier,
+
+          agronomist, engineer, farmer,
           ;
         each(@ma-name, {
           .ma-name--@{value} {
