Replace T. Economizer with Incorporator
Fixes #7281

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -623,7 +623,7 @@
           curator, tourist, a-engineer, a-zoologist,
 
           t-collector, firestarter, terra-pioneer, spacefarer, gambler,
-          biologist, t-economizer, t-politician, urbanist, warmonger,
+          biologist, t-politician, urbanist, warmonger,
           incorporator, manufacturer, politician,
         ;
         each(@ma-name-fanmade, {
