feat(corp): add Trisyn Institute - rewards RGB synergy with card draw
Add a new corporation card: Trisyn Institute.

- Starting with 48 M€ and a science tag.
- Effect: After playing a project card, if this completes a new set of red, green, and blue project cards (project types: Event, Automated, Active), draw 1 card.
- Includes localization for Chinese ("三重协同研究所") and UI rendering with emphasized "new set" keyword.
- Adds internal counter to track number of completed RGB sets and avoid duplicate triggers.

This corporation encourages balanced deck strategies and rewards players for diversifying their project colors.

--- a/src/styles/cards_v2.less
+++ b/src/styles/cards_v2.less
@@ -1554,6 +1554,13 @@
                     text-shadow: 0 0 1px black;
                 }
             }
+            .card-one-set {
+                background: url("./assets/MYDIY/card_one_set.png");
+                height: 40px;
+                width: 30px;
+                background-size: 30px 40px;
+                vertical-align: middle;
+            }
             .card-icon {
                 position: absolute;
                 right: -9px;
