feat(corp): add LunaChain Corporation card with synergy-based MegaCredits gain
- Introduced a new corporation card: **LunaChain**.
- Starting with 48 M€, tagged with **Earth**.
- Effect: When the actual paid M€ of your current and previous project cards differ by X (X < 3), gain (3 - X) M€.
- Adds a tracking system for total MegaCredits gained and the number of project cards played, with the player receiving different titles based on their performance (LunaChain God, LunaChain Baker, LunaChain Champion, LunaChain Newbie).
- Includes localization and card rendering with a focus on the new "LunaChain" synergy effect.
- UI feature to display the actual paid M€ of the previous card is not yet implemented. There is temporary code in `src\client\components\card\Card.vue` that will require future edits to fix the UI.
- Unit tests for this functionality are not written yet.

This new corporation card offers a dynamic and rewarding mechanic based on the relative cost of consecutive project cards, incentivizing careful planning and strategy.

--- a/src/styles/cards_v2.less
+++ b/src/styles/cards_v2.less
@@ -1207,6 +1207,22 @@
                 font-size: 18px;
                 text-align: center;
             }
+            .card-resource-money-text {
+                font-family: Prototype;
+                color: black;
+                background-image: url(./assets/resources/megacredit.png);
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-position: center;
+                font-weight: normal;
+                font-size: 18px;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 30px;
+                height: 30px;
+            }
             .card-money--L {
                 width: 46px;
                 height: 46px;
