feat(corp): add Tithes corporation card
New corporation: Tithes, starts with 42 M€, tagged with Earth.

Action: Each other player loses 10% of their M€ (rounded down); you gain the total.

Players who lose 3 M€ or more draw 1 card.

Includes UI layout, log messages, and localization.

Unit tests not yet implemented.

--- a/src/styles/mydiy.less
+++ b/src/styles/mydiy.less
@@ -40,3 +40,11 @@
     color: #a56387; /* 调整颜色，以便在背景上清晰显示 */
     font-weight: bold; /* 强调字体 */
 }
+
+.card-tithes-logo {
+    background-image: url(./assets/MYDIY/corp-logo-tithes.png);
+    height: 90px;
+    width: 90px;
+    background-size: 90px 90px;
+    margin-top: 10px;
+}
