--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -1,9 +1,28 @@
+.mingyue-icon:after {
+    position: absolute;
+    border: 1px solid black;
+    background: rgb(84, 150, 201);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.4);
+    content: "";
+    background-image: url(./assets/expansion_icons/expansion_icon_mingyue.png);
+    background-size: 16px 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.expansion-icon-mingyue {
+    background-image: url(./assets/expansion_icons/expansion_icon_mingyue.png);
+}
+
 .card-icon-name-contains-asteroid {
-    background-image: url("./assets/MYDIY/asteroid.png");
+    background-image: url("./assets/mingyue/asteroid.png");
 }
 
 .card-icon-loop-arrow {
-    background-image: url("./assets/MYDIY/loop_arrow.png");
+    background-image: url("./assets/mingyue/loop_arrow.png");
     background-size: 30px;
     width: 30px;
     height: 30px;
@@ -14,15 +33,15 @@
 }
 
 .card-icon-x-dian {
-    background-image: url("./assets/MYDIY/x-dian.png");
+    background-image: url("./assets/mingyue/x-dian.png");
 }
 
 .card-icon-5-dian {
-    background-image: url("./assets/MYDIY/5-dian.png");
+    background-image: url("./assets/mingyue/5-dian.png");
 }
 
 .card-icon-6-dian {
-    background-image: url("./assets/MYDIY/6-dian.png");
+    background-image: url("./assets/mingyue/6-dian.png");
 }
 
 .card-container {
@@ -30,7 +49,7 @@
 }
 
 .card-luna-chain-logo {
-    background-image: url(./assets/MYDIY/corp-logo-luna-chain.png);
+    background-image: url(./assets/mingyue/corp-logo-luna-chain.png);
     height: 48px;
     width: 132px;
     background-size: 132px 48px;
@@ -62,17 +81,17 @@
     line-height: 1;
 }
 
-  .card-lastpay-counter-number {
+.card-lastpay-counter-number {
     font-size: 20px;
     color: #a56387;
     font-weight: bold;
     text-align: center;
     width: 100%; /* 保证文字在容器内水平居中 */
     line-height: 1;
-  }
+}
 
 .card-tithes-logo {
-    background-image: url(./assets/MYDIY/corp-logo-tithes.png);
+    background-image: url(./assets/mingyue/corp-logo-tithes.png);
     height: 90px;
     width: 90px;
     background-size: 90px 90px;
@@ -80,19 +99,19 @@
 }
 
 .card-resource-monkey {
-    //background-image: url(./assets/MYDIY/monkey.png);
+    //background-image: url(./assets/mingyue/monkey.png);
     background-image: url(./assets/resources/animal.png);
 }
 
 .board-space-tile--gambling-district-las-vegas {
-	background: url("./assets/MYDIY/gambling-district-las-vegas-tile.png");
+	background: url("./assets/mingyue/gambling-district-las-vegas-tile.png");
 	width: 44px;
 	height: 50px;
 	background-size: 44px, 50px;
 }
 
 .card-tile-gambling-district-las-vegas {
-	background: url("./assets/MYDIY/gambling-district-las-vegas-tile.png");
+	background: url("./assets/mingyue/gambling-district-las-vegas-tile.png");
 	width: 40px;
 	height: 47px;
 	background-size: 40px;
