feat: 添加公司“狸克建设（Nook Construction）”
- 新增公司卡牌：Nook Construction（狸克建设）

- 添加卡牌资源类型 Bells

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -161,3 +161,15 @@
     background-size: 150px 61.8px;
     margin-top: 10px;
 }
+
+.card-resource-bells {
+    background-image: url(./assets/mingyue/bells.png);
+}
+
+.card-nook-construction-logo {
+    background-image: url(./assets/mingyue/corp-logo-nook-construction.png);
+    width: 90px;
+    height: 85.8px;
+    background-size: 90px 85.8px;
+    margin-top: 10px;
+}
