feat: 添加 Trisyn Institute 的公司标志

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -186,6 +186,14 @@
 	background-repeat: no-repeat;
 }
 
+.card-trisyn-institute-logo {
+    background-image: url(./assets/mingyue/corp-logo-trisyn-institute.png);
+    width: 80px;
+    height: 80px;
+    background-size: 80px 80px;
+    margin-top: 10px;
+}
+
 .card-rainbow-park-logo {
     background-image: url(./assets/mingyue/corp-logo-rainbow-park.png);
     width: 95.7px;
