feat(ui): 添加7热升温变体图标，移动双公司变体图标代码位置

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -1,3 +1,11 @@
+.expansion-icon-doubleCorp {
+    background-image: url(./assets/expansion_icons/expansion_icon_doubleCorp.png);
+}
+
+.expansion-icon-sevenHeat {
+    background-image: url(./assets/expansion_icons/expansion-icon-sevenHeat.png);
+}
+
 .mingyue-icon:after {
     position: absolute;
     border: 1px solid black;
