--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -25,6 +25,25 @@
     background-image: url(./assets/expansion_icons/expansion_icon_mingyue.png);
 }
 
+.rebalanced-icon:after {
+    position: absolute;
+    border: 1px solid black;
+    background: rgb(84, 150, 201);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.4);
+    content: "";
+    background-image: url(./assets/expansion_icons/expansion_icon_rebalanced.png);
+    background-size: 16px 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.expansion-icon-rebalanced {
+    background-image: url(./assets/expansion_icons/expansion_icon_rebalanced.png);
+}
+
 .card-icon-name-contains-asteroid {
     background-image: url("./assets/mingyue/asteroid.png");
 }
