feat: 将 Chemical 扩展迁移为独立模块，并添加启用选项
- 新增 chemical 模块目录，迁移原本 mingyue 下的 11 张化学卡牌（CHM01–CHM11）
- 更新 CardName.ts 中的卡牌定义及编号前缀
- 在 GameOptions 中添加 Chemical 扩展勾选按钮
- 注册 chemical 扩展卡牌清单及依赖逻辑
- 默认不启用该扩展，需在创建游戏时显式勾选

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -44,6 +44,25 @@
     background-image: url(./assets/expansion_icons/expansion_icon_rebalanced.png);
 }
 
+.chemical-icon:after {
+    position: absolute;
+    border: 1px solid black;
+    background: rgb(84, 150, 201);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.4);
+    content: "";
+    background-image: url(./assets/expansion_icons/expansion_icon_chemical.png);
+    background-size: 16px 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.expansion-icon-chemical {
+    background-image: url(./assets/expansion_icons/expansion_icon_chemical.png);
+}
+
 .my-card-icon {
     background-size: 30px;
     width: 30px;
