feat(card): 添加公司卡牌 R51 - Aristarchus
添加新公司卡牌 Aristarchus，编号 R51，初始资源为 33 M€，包含金星、地球、木星三种标签。

公司效果：
- 行动：如果你当前拥有的 M€ 恰好为 0，则可以获得 10 M€。

--- a/src/styles/cards_v2.less
+++ b/src/styles/cards_v2.less
@@ -650,6 +650,26 @@
                 font-size: 45px;
                 top: 20px;
             }
+            .card-junk-ventures-logo {
+                color: firebrick;
+                font-family: Ubuntu;
+                text-align: center;
+                text-shadow: 0 2px 2px gray;
+                font-size: 26px;
+                position: absolute;
+                top: 24px;
+                left: 0px;
+            }
+            .card-aristarchus-logo {
+                color: grey;
+                font-family: sans-serif;
+                text-align: center;
+                text-shadow: 1px 1px 1px black;
+                font-size: 28px;
+                position: absolute;
+                top: 50px;
+                left: 0px;
+            }
             .card-mars-maths-logo {
                 position: absolute;
                 font-size: 24px;
