feat: 添加公司卡牌 MY-CORP-11 - Immediate Action Corp
新增公司 Immediate Action Corp，起始资金 48 M€，拥有以下效果：

- 当你打出具有行动的蓝卡时，立刻执行一次该卡的行动（不消耗使用次数）
- 每当你打出一张蓝卡，获得 1 M€

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -81,6 +81,10 @@
     background-image: url("./assets/mingyue/loop_arrow.png");
 }
 
+.card-icon-quick-arrow {
+    background-image: url("./assets/mingyue/quick_arrow.png");
+}
+
 .card-icon-x-dian {
     background-image: url("./assets/mingyue/x-dian.png");
 }
