--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -257,3 +257,11 @@
     background-size: 95.7px 80px;
     margin-top: 10px;
 }
+
+.card-flowing-cloud-logo {
+    background-image: url(./assets/mingyue/corp-logo-flowing-cloud.png);
+    width: 80px;
+    height: 80px;
+    background-size: 80px 80px;
+    margin-top: 10px;
+}
