feat: 添加公司卡牌 MY-CORP-15 - Data Communication Center
新增公司 Data Communication Center（数据流通中心），起始资金 42 M€ 和 3 能量，拥有以下效果：

- 当电力产能上升或消耗电力资源时，添加 1 数据到此卡
- 每当此卡上至少有 3 数据时，自动移除 3 数据以抽 1 张牌

--- a/src/styles/mingyue.less
+++ b/src/styles/mingyue.less
@@ -293,3 +293,11 @@
     letter-spacing: 6px;
     font-size: 45px;
 }
+
+.card-data-communication-center-logo {
+    background-image: url(./assets/mingyue/corp-logo-data-communication-center.png);
+    width: 150px;
+    height: 50.25px;
+    background-size: 150px 50.25px;
+    margin-top: 10px;
+}
